# DS-CASESTUDY-SALESFORECAST

./: .gitignore  APPROACH.MD  README.MD  generate_data.py  process.py  process_test.py  pyproject.toml  requirements.txt
notebooks/: baseline.ipynb  modeling.ipynb  testing.ipynb  training.ipynb
